@@ -1,3 +1,8 @@
+2006-04-28 Daniel Perez <daniel@gforgegroup.com>
+	* Applied patch : Fixing daily_task_email cronjob
+		http://gforge.org/tracker/?func=detail&aid=2307&group_id=1&atid=106
+
+
 2006-04-26 Tim Perdue <tim@gforgegroup.com>
 
 	* fixed a bug in artifactfactory where arrays were being saved and creating
